--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
 
 
-      <div class="head">ծլկ</div>
+      <div class="head">ծլիկ</div>
       <div class="cont">
         <div class="context">
           Ծլիկը (clitoris) համապատասխանում է տղամարդու առնանդամի խորշիկավոր
